--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,9 @@
 services:
   - type: web
     name: mtg-deck-builder
-    env: static
-    staticPublishPath: .
+    env: node
+    buildCommand: npm install
+    startCommand: npm start
+    envVars:
+      - key: NODE_VERSION
+        value: 18
