--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Magic the Gathering Deck Builder with Firebase",
   "main": "index.html",
   "scripts": {
-    "start": "npx serve -s . -l 3000"
+    "start": "npx serve . -l 3000"
   },
   "keywords": ["mtg", "deck-builder", "magic-the-gathering"],
   "author": "",
